<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="fill"
    tools:context="com.example.powerup.Game">

    <TextView
        android:id="@+id/scenarioNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/redoButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/transparent"
        android:backgroundTint="@color/abc_primary_text_disable_only_material_dark"
        android:ems="@integer/text_view_ems"
        android:hint="@string/pgame_scenario_hint"
        android:textColor="@android:color/black"
        android:textSize="@dimen/game_text_size"
        android:layout_marginLeft="@dimen/pgame_quesitionView_marginLeft"
        android:layout_marginStart="@dimen/pgame_quesitionView_marginLeft"
        android:paddingTop="@dimen/scenerio_name_margin"/>

    <ListView
        android:id="@+id/mainListView"
        android:layout_width="@dimen/main_list_view_width"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/askerImageView"
        android:background="@android:color/white"
        android:clickable="true" />

    <Button
        android:id="@+id/continueButtonGoesToMap"
        android:layout_width="@dimen/continue_button_map_width"
        android:layout_height="@dimen/continue_button_map_height"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/home" />

    <Button
        android:id="@+id/redoButton"
        android:layout_width="@dimen/redo_button_width"
        android:layout_height="@dimen/redo_button_height"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@id/continueButtonGoesToMap"
        android:background="@drawable/replay" />

    <ImageView
        android:id="@+id/askerImageView"
        android:layout_width="@dimen/asker_image_view_width"
        android:layout_height="@dimen/asker_image_view_height"
        android:layout_alignParentRight="true"
        android:layout_below="@id/scenarioNameEditText"
        android:src="@drawable/marco" />

    <RelativeLayout
        android:id="@+id/power_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/power_bar_view_height"
        android:layout_alignParentBottom="true">

        <ImageView
            android:id="@+id/powerBarView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/power_bar_view_height"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/power_status_bar" />

        <com.akexorcist.roundcornerprogressbar.IconRoundCornerProgressBar
            android:id="@+id/powerbarHealing"
            android:layout_width="@dimen/power_bar_width"
            android:layout_height="@dimen/power_bar_height"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="@dimen/power_bar_margin_right"
            android:layout_marginTop="@dimen/power_bar_margin_top"
            app:rcBackgroundColor="@android:color/black"
            app:rcBackgroundPadding="@dimen/power_bar_radius_padding"
            app:rcMax="@integer/max_progress"
            app:rcProgress="@integer/half_progress"
            app:rcProgressColor="@color/powerup_purple_light"
            app:rcRadius="@dimen/power_bar_radius" />

        <com.akexorcist.roundcornerprogressbar.IconRoundCornerProgressBar
            android:id="@+id/powerbarStrength"
            android:layout_width="@dimen/power_bar_width"
            android:layout_height="@dimen/power_bar_height"
            android:layout_alignParentRight="true"
            android:layout_below="@id/powerbarHealing"
            android:layout_marginRight="@dimen/power_bar_margin_right"
            android:layout_marginTop="@dimen/power_bar_margin_right"
            app:rcBackgroundColor="@android:color/black"
            app:rcBackgroundPadding="@dimen/power_bar_radius_padding"
            app:rcMax="@integer/max_progress"
            app:rcProgress="@integer/half_progress"
            app:rcProgressColor="@color/powerup_pink"
            app:rcRadius="@dimen/power_bar_radius" />

        <com.akexorcist.roundcornerprogressbar.IconRoundCornerProgressBar
            android:id="@+id/powerbarTelepathy"
            android:layout_width="@dimen/power_bar_width"
            android:layout_height="@dimen/power_bar_height"
            android:layout_alignTop="@id/powerbarHealing"
            android:layout_marginRight="@dimen/power_bar_margin_right"
            android:layout_toLeftOf="@id/powerbarHealing"
            android:layout_toStartOf="@id/powerbarHealing"
            app:rcBackgroundColor="@android:color/black"
            app:rcBackgroundPadding="@dimen/power_bar_radius_padding"
            app:rcMax="@integer/max_progress"
            app:rcProgress="@integer/half_progress"
            app:rcProgressColor="@color/powerup_blue_green"
            app:rcRadius="@dimen/power_bar_radius" />

        <com.akexorcist.roundcornerprogressbar.IconRoundCornerProgressBar
            android:id="@+id/powerbarInvisibility"
            android:layout_width="@dimen/power_bar_width"
            android:layout_height="@dimen/power_bar_height"
            android:layout_alignLeft="@id/powerbarTelepathy"
            android:layout_alignStart="@id/powerbarTelepathy"
            android:layout_alignTop="@id/powerbarStrength"
            app:rcBackgroundColor="@android:color/black"
            app:rcBackgroundPadding="@dimen/power_bar_radius_padding"
            app:rcMax="@integer/max_progress"
            app:rcProgress="@integer/half_progress"
            app:rcProgressColor="@color/powerup_yellow"
            app:rcRadius="@dimen/power_bar_radius" />

    </RelativeLayout>

    <TextView
        android:id="@+id/questionView"
        android:layout_width="@dimen/question_view_width"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@id/askerImageView"
        android:layout_marginLeft="@dimen/gameActivity_ll_margin_left"
        android:layout_marginTop="@dimen/question_view_margin_top"
        android:background="@android:color/transparent"
        android:ems="@integer/text_view_ems"
        android:hint="@string/question"
        android:textColor="@android:color/black"
        android:textSize="@dimen/game_text_size" />

    <RelativeLayout
        android:layout_width="@dimen/asker_image_view_width"
        android:layout_height="@dimen/asker_image_view_height"
        android:layout_above="@id/power_bar"
        android:layout_below="@id/questionView"
        android:layout_marginTop="@dimen/avatar_margin_top">

        <ImageView
            android:id="@+id/faceImageView"
            android:layout_width="@dimen/face_view_width"
            android:layout_height="@dimen/face_view_height"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/pgame_face_image_view_margin_top"
            android:src="@drawable/face1" />

        <ImageView
            android:id="@+id/eyeImageView"
            android:layout_width="@dimen/eye_view_width"
            android:layout_height="@dimen/eye_view_height"
            android:layout_alignBottom="@id/faceImageView"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/eye_view_margin_bottom"
            android:src="@drawable/eye1" />

        <ImageView
            android:id="@+id/hairImageView"
            android:layout_width="@dimen/hair_view_width"
            android:layout_height="@dimen/hair_view_height"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/faceImageView"
            android:src="@drawable/hair1" />

        <ImageView
            android:id="@+id/clothImageView"
            android:layout_width="@dimen/cloth_view_width"
            android:layout_height="@dimen/cloth_view_height"
            android:layout_alignTop="@+id/eyeImageView"
            android:layout_centerHorizontal="true"
            android:src="@drawable/cloth1" />


    </RelativeLayout>
</RelativeLayout>
