<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Power Up</string>
    <string name="action_settings">Settings</string>
    <string name="house">School</string>
    <string name="boyfriend">Home</string>
    <string name="hospital">Hospital</string>
    <string name="school">Library</string>
    <string name="powerup">"PowerUp"</string>
    <string name="completed_scene">This scene is completed Darling.\n\n
        Please go back to the map or buy exciting things from the store</string>
...
    <string name="start_text"><b>Start</b></string>
    <string name="about_text"><b>About</b></string>
    <string name="continue_text"><b>Continue</b></string>
    <string name="replay"><b>Replay</b></string>
    <string name="ok" />
    <string name="create_avatar">\"Create new Avatar\"</string>
    <string name="ok_msg">Create new Avatar</string>
    <string name="start_dialog_message">If you start a new game, previous data and all karma points will be lost !</string>
    <string name="start_title_message">Are you Sure ?</string>
    <string name="start_confirm_message">Create new Avatar</string>
    <string name="purchase_confirm_title">Warning</string>
    <string name="purchase_confirm_message">Are you sure you want to purchase this item? You will be spending %d points and the purchase can\'t be reverted</string>
    <string name="purchase_confirm_ok">Purchase</string>
...
