...
        android:layout_height="0dp"
        android:layout_weight="2.6"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/newUserButtonFirstPage"
            android:layout_width="@dimen/new_user_button_width"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:alpha="0" />

        <Button
...
