<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/karmaImageView"
            android:layout_width="@dimen/karma_iv_width"
            android:layout_height="@dimen/karma_iv_height"
            android:src="@drawable/karma_box" />

        <TextView
            android:id="@+id/karmaPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/scenario_tv_margin"
            android:layout_marginTop="@dimen/scenario_tv_margin"
            android:hint="@string/points"
            android:textColor="@color/powerup_black"
            android:textSize="@dimen/back_button_textsize"/>

    </RelativeLayout>
    
    <TextView
        android:id="@+id/completed_game_textView"
        android:layout_width="@dimen/completed_game_width"
        android:layout_height="@dimen/completed_game_height"
        android:text="@string/completed_game"
        android:textColor="@android:color/black"
        android:textSize="@dimen/game_text_size"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/complete_activity_margin_bottom"
        android:layout_marginLeft="@dimen/complete_activity_margin_left"
        android:layout_marginBottom="@dimen/complete_activity_margin_bottom"/>

</LinearLayout>
